# tezos

./: .gitlab-ci.yml  Makefile  active_protocol_versions  dune  import.ml  vendor.sh
docs/developer/: python_testing_framework.rst
docs/user/: various.rst
docs/whitedoc/: voting.rst
scripts/: version.sh
src/bin_client/: dune  tezos-client.opam
src/bin_node/: dune  main.ml  node_config_command.ml  node_config_file.ml  node_reconstruct_command.ml  node_replay_command.ml  node_run_command.ml  node_shared_arg.ml  node_snapshot_command.ml  tezos-node.opam
src/bin_sandbox/: command_ledger_wallet.ml  command_voting.ml
src/bin_validation/: validator.ml
src/lib_client_base/: client_keys.ml  client_keys.mli
src/lib_client_commands/: client_admin_commands.ml  client_keys_commands.ml
src/lib_crypto/: base58.ml  base58.mli
src/lib_protocol_environment/: dummy_context.ml  dune  environment_V0.ml  environment_V1.ml  environment_V2.ml  environment_context.ml  environment_context.mli  environment_context_intf.ml  memory_context.ml  memory_context.mli  proxy_context.ml  proxy_context.mli  shell_context.ml
src/lib_protocol_environment/test/: test_mem_context.ml  test_mem_context_array_theory.ml
src/lib_protocol_updater/: registered_protocol.ml
src/lib_proxy/test/: test_proxy.ml
src/lib_shell/: block_directory.ml  block_validator.ml  block_validator_process.ml  chain_validator.ml  node.ml  prevalidation.ml  prevalidator.ml  snapshots.ml  snapshots.mli  state.ml  state.mli  store.ml  store.mli  validator.mli
src/lib_shell/bench/: bench_tool.ml
src/lib_shell/test/: test_locator.ml  test_state.ml  test_state_checkpoint.ml
src/lib_shell_benchmarks/: io_helpers.ml  io_stats.ml
src/lib_shell_services/: block_services.ml  validation_errors.ml
src/lib_signer_backends/: encrypted.ml  encrypted.mli
src/lib_storage/: context.ml  context.mli  context_dump.ml  context_dump.mli  context_intf.ml  dune  tezos-storage.opam
src/lib_storage/encoding/: context.ml
src/lib_storage/memory/: context.ml  context.mli
src/lib_storage/test/: assert.ml  dune  test_context.ml  test_context.mli
src/lib_storage/test_flat/: test.ml
src/lib_validation/: block_validation.ml
src/proto_001_PtCJ7pwo/lib_client/: injection.ml
src/proto_002_PsYLVpVv/lib_client/: injection.ml
src/proto_003_PsddFKi3/lib_delegate/: client_baking_forge.ml
src/proto_004_Pt24m4xi/lib_delegate/: client_baking_forge.ml
src/proto_006_PsCARTHA/lib_client/: mockup.ml
src/proto_007_PsDELPH1/lib_delegate/: client_baking_forge.ml
src/proto_008_PrwZFRvi/bin_accuser/: dune  tezos-accuser-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/bin_baker/: dune  tezos-baker-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/bin_endorser/: dune  tezos-endorser-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/lib_client/: client_proto_args.ml  client_proto_baker.ml  client_proto_context.ml  client_proto_utils.mli  dune  injection.ml  mockup.ml  operation_result.ml  tezos-client-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/lib_client/test/: dune
src/proto_008_PrwZFRvi/lib_client_commands/: alpha_commands_registration.ml  client_proto_baker_commands.ml  client_proto_multisig_commands.ml  client_proto_programs_commands.ml  client_proto_utils_commands.ml  dune  tezos-client-008-PrwZFRvi-commands-registration.opam  tezos-client-008-PrwZFRvi-commands.opam
src/proto_008_PrwZFRvi/lib_client_sapling/: client_sapling_commands.ml  dune  tezos-client-sapling-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/lib_delegate/: dune  tezos-accuser-008-PrwZFRvi-commands.opam  tezos-baking-008-PrwZFRvi-commands.opam  tezos-baking-008-PrwZFRvi.opam  tezos-endorser-008-PrwZFRvi-commands.opam
src/proto_008_PrwZFRvi/lib_mempool/: dune  filter.ml  tezos-mempool-008-PrwZFRvi.opam
src/proto_008_PrwZFRvi/lib_parameters/: dune  tezos-protocol-008-PrwZFRvi-parameters.opam
src/proto_008_PrwZFRvi/lib_protocol/: TEZOS_PROTOCOL  alpha_context.mli  amendment.ml  amendment.mli  apply_results.mli  baker_services.mli  baker_storage.ml  baking.ml  baking.mli  cheating_proofs.ml  constants_repr.ml  contract_repr.ml  contract_services.ml  contract_storage.mli  dune-project  dune.inc  helpers_services.ml  helpers_services.mli  init_storage.ml  main.ml  storage.mli  (+15 more)
src/proto_008_PrwZFRvi/lib_protocol/test/: activation.ml  combined_operations.ml  contract.ml  dune  gas_properties.ml  main.ml  test_helpers_rpcs.ml  test_sapling.ml  transfer.ml  typechecking.ml
src/proto_008_PrwZFRvi/lib_protocol/test/helpers/: account.ml  assert.ml  block.ml  context.mli  dune  incremental.ml  op.ml  sapling_helpers.ml  tezos-008-PrwZFRvi-test-helpers.opam
src/proto_demo_noops/test/: dune
tests_python/client/: client.py  client_output.py
tests_python/examples/: example.py
tests_python/tests/: conftest.py  test_baker.py  test_baker_compatibility.py  test_baker_multisig.py  test_bootstrap.py  test_contract.py  test_contract_baker.py  test_contract_caching.py  test_contract_onchain_opcodes.py  test_contract_opcodes.py  test_deprecated_rpc.py  test_double_endorsement.py  test_mempool.py  test_migration.py  test_multinode.py  test_multinode_snapshot.py  test_multinode_storage_reconstruction.py  test_rpc.py  test_sapling.py  test_voting.py  test_voting_full.py
tests_python/tools/: client_regression.py  constants.py  utils.py
tezt/_regressions/: protocol.alpha.baker.frozen_balance.out  protocol.alpha.baker.frozen_balance_by_cycles.out  protocol.alpha.contract.out  protocol.alpha.operation.internal.out  protocol.alpha.operation.out  protocol.alpha.operation.unsigned.out  protocol.alpha.receipt.balance_updates.out  protocol.alpha.vote.ballot.out  protocol.alpha.vote.listings.out
tezt/lib_tezos/: client.ml  client.mli  constant.ml
tezt/manual_tests/: migration.ml
tezt/tests/: double_bake.ml  encoding.ml
vendors/dev/bheap/: bheap.opam
vendors/flextesa-lib/: tezos_protocol.ml  tezos_protocol.mli
vendors/irmin/: commit.ml  contents.ml  irmin.mli  irmin.opam  node.ml  s.ml  store.ml  tree.ml
vendors/irmin-pack/: bloomf.ml  bloomf.mli  dune  irmin-pack.opam  irmin_pack.ml  irmin_pack.mli
(+150 files in other folders)
