(library
 (name tezos_client_008_PrwZFRvi)
 (public_name tezos-client-008-PrwZFRvi)
 (libraries tezos-base
            tezos-protocol-008-PrwZFRvi
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-008-PrwZFRvi-parameters)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_protocol_008_PrwZFRvi_parameters
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
