(library
 (name tezos_client_008_PrwZFRvi_commands)
 (public_name tezos-client-008-PrwZFRvi-commands)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-protocol-008-PrwZFRvi
            tezos-protocol-environment
            tezos-shell-services
            tezos-mockup
            tezos-mockup-registration
            tezos-mockup-commands
            tezos-client-base-unix
            tezos-client-008-PrwZFRvi
            tezos-client-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \ alpha_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_commands
                   -open Tezos_client_base_unix
                   -open Tezos_rpc)))

(library
 (name tezos_client_008_PrwZFRvi_commands_registration)
 (public_name tezos-client-008-PrwZFRvi-commands-registration)
 (libraries tezos-base
            tezos-protocol-008-PrwZFRvi
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-008-PrwZFRvi
            tezos-client-commands
            tezos-client-008-PrwZFRvi-commands
            tezos-client-sapling-008-PrwZFRvi
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules alpha_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_commands
                   -open Tezos_client_008_PrwZFRvi_commands
                   -open Tezos_client_sapling_008_PrwZFRvi
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
