(library
 (name tezos_client_sapling_008_PrwZFRvi)
 (public_name tezos-client-sapling-008-PrwZFRvi)
 (libraries tezos-base
            tezos-crypto
            tezos-client-base
            tezos-signer-backends
            tezos-client-008-PrwZFRvi
            tezos-client-008-PrwZFRvi-commands
            tezos-protocol-008-PrwZFRvi)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_008_PrwZFRvi_commands
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_protocol_environment_008_PrwZFRvi)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
