(library
 (name tezos_baking_008_PrwZFRvi)
 (public_name tezos-baking-008-PrwZFRvi)
 (libraries tezos-base
            tezos-version
            tezos-protocol-008-PrwZFRvi
            tezos-protocol-environment
            tezos-shell-context
            tezos-shell-services
            tezos-client-base
            tezos-client-008-PrwZFRvi
            tezos-client-commands
            tezos-stdlib-unix
            tezos-storage
            tezos-rpc-http
            tezos-rpc
            lwt-canceler)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_context
                   -open Tezos_storage
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_008_PrwZFRvi_commands)
 (public_name tezos-baking-008-PrwZFRvi-commands)
 (libraries tezos-base
            tezos-protocol-008-PrwZFRvi
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-008-PrwZFRvi
            tezos-client-commands
            tezos-baking-008-PrwZFRvi)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_commands
                   -open Tezos_baking_008_PrwZFRvi
                   -open Tezos_rpc)))

(library
 (name tezos_baking_008_PrwZFRvi_commands_registration)
 (public_name tezos-baking-008-PrwZFRvi-commands.registration)
 (libraries tezos-base
            tezos-protocol-008-PrwZFRvi
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-008-PrwZFRvi
            tezos-client-commands
            tezos-baking-008-PrwZFRvi
            tezos-baking-008-PrwZFRvi-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_client_commands
                   -open Tezos_baking_008_PrwZFRvi
                   -open Tezos_baking_008_PrwZFRvi_commands
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
