(library
 (name tezos_mempool_008_PrwZFRvi)
 (public_name tezos-mempool-008-PrwZFRvi)
 (libraries tezos-base
            tezos-embedded-protocol-008-PrwZFRvi
            tezos-protocol-008-PrwZFRvi)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_embedded_protocol_008_PrwZFRvi
                   -open Tezos_protocol_008_PrwZFRvi)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
