(executable
 (name main)
 (libraries tezos-base
            tezos-micheline
            tezos-protocol-environment
            alcotest-lwt
            tezos-008-PrwZFRvi-test-helpers
            tezos-stdlib-unix
            tezos-client-base
            tezos-protocol-008-PrwZFRvi-parameters
            tezos-test-services
            sapling
            tezos-client-008-PrwZFRvi)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_client_008_PrwZFRvi
                   -open Tezos_protocol_008_PrwZFRvi
                   -open Tezos_protocol_environment_008_PrwZFRvi
                   -open Tezos_008_PrwZFRvi_test_helpers
                   -open Tezos_test_services
                   -open Tezos_client_008_PrwZFRvi)))

(rule
 (alias buildtest)
 (package tezos-protocol-008-PrwZFRvi-tests)
 (deps main.exe)
 (action (progn)))

(rule
 (copy %{lib:tezos-protocol-008-PrwZFRvi-parameters:test-parameters.json}
       protocol_parameters.json))

; runs only the `Quick tests
(rule
 (alias runtest_proto_008_PrwZFRvi)
 (deps (glob_files contracts/*))
 (package tezos-protocol-008-PrwZFRvi-tests)
 (action (run %{exe:main.exe} -v -q)))

; runs both `Quick and `Slow tests
(rule
 (alias runtest_slow)
 (deps (glob_files contracts/*))
 (package tezos-protocol-008-PrwZFRvi-tests)
 (action (run %{exe:main.exe} -v)))

(rule
 (alias runtest)
 (package tezos-protocol-008-PrwZFRvi-tests)
 (deps (alias runtest_proto_008_PrwZFRvi))
 (action (progn)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
